chore(export status): rename statusManager to executionStatusManager
