# src/routers/getGeopackageExecutionStatus.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import { container } from 'tsyringe';
-import { GetStatusController } from '../controllers/getStatus';
+import { GetStatusController } from '../controllers/getGeopackageExecutionStatus';
 
 const getStatusRouter = Router();
 const controller = container.resolve(GetStatusController);
